# TraitMod

./: README.md  README.txt
TraitModLib/: CMakeLists.txt  TM_Character.cpp  TM_Character.h  TM_CharacterDatabase.cpp  TM_CharacterDatabase.h  TM_ConsoleLogger.cpp  TM_ConsoleLogger.h  TM_Database.cpp  TM_Database.h  TM_Exception.cpp  TM_Exception.h  TM_FileLogger.cpp  TM_FileLogger.h  TM_IDatabase.h  TM_ILogger.h  TM_Location.cpp  TM_Location.h  TM_Map.cpp  TM_Traits.cpp  TM_Traits.h  TestEntryPoint.cpp  generate.bat
TraitModLib/include/: TM_Character.h  TM_CharacterDatabase.h  TM_ConsoleLogger.h  TM_Database.h  TM_Exception.h  TM_IDatabase.h  TM_ILogger.h  TM_Location.h  TM_Map.h
TraitModLib/src/: TM_Character.cpp  TM_CharacterDatabase.cpp  TM_ConsoleLogger.cpp  TM_Database.cpp  TM_Event.cpp  TM_Exception.cpp  TM_Location.cpp  TM_Map.cpp
TraitModUnitTests/: stdafx.cpp  unittest1.cpp
